--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Neo Adam Bontia</h1>
+    <img src="neobontia.github.io\images\DP_smaller.jpg"
+        alt="Neo's Picture">
 </body>
 
 </html>
