--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Neo Adam Bontia</h1>
-    <img src="neobontia.github.io\images\DP_smaller.jpg"
+    <img src="https://github.com/neoBontia/neobontia.github.io/blob/master/images/DP_smaller.jpg"
         alt="Neo's Picture">
 </body>
 
