Fixed bug in img src

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 
 <body>
-    <h1>Neo Adam Bontia</h1>
-    <img src="https://github.com/neoBontia/neobontia.github.io/blob/master/images/DP_smaller.jpg"
-        alt="Neo's Picture">
+    <div id="content">
+        <h1>Neo Adam Bontia</h1>
+        <div id="profile_pic">
+            <img src="images/DP_smaller.jpg" alt="Neo's Picture">
+        </div>
+    </div>
 </body>
 
 </html>
