--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <title>Neo Adam Bontia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stykesheet" href="css/style.css">
 </head>
 
 <body>
