--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <div id="content">
+<body id="body_index">
+    <header id="myName">
         <h1>Neo Adam Bontia</h1>
-        <div id="profile_pic">
-            <img src="images/DP_smaller.jpg" alt="Neo's Picture">
-        </div>
+    </header>
+        
+    <div id="content_index">
+        <h2>WD230: Assignment Portal</h2>
+        <hr>
+        <ul>
+            <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
+            <li>Lesson 01: <a href="#">Design Principles Document</a></li>
+        </ul>
     </div>
+
+    <div id="displayPicture">
+        <img src="images/DP_smaller.jpg" alt="My Picture">
+    </div>
+
+    <footer>
+        <p id="info">
+            "© 2021 | Neo Adam Bontia | Philippines | "
+            <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+        </p>
+        <p id="update">Last Update: </p>
+    </footer>
 </body>
 
 </html>
