--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <footer>
         <p id="info">
-            "© 2021 | Neo Adam Bontia | Philippines | "
+            © 2021 | Neo Adam Bontia | Philippines | 
             <a href="https://www.byui.edu/online">BYUI Online Learning</a>
         </p>
         <p id="update">Last Update: </p>
