Added meta descriptions in the head.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-us">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neo Adam Bontia</title>
+    <meta name="description" content="Assignment portal for Neo Adam Bontia in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
