Changed ids to class and created grid in style.css

--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body id="body_index">
-    <header id="myName">
-        <h1>Neo Adam Bontia</h1>
-    </header>
-        
-    <div id="content_index">
-        <h2>WD230: Assignment Portal</h2>
-        <hr>
-        <ul>
-            <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
-            <li>Lesson 01: <a href="#">Design Principles Document</a></li>
-        </ul>
-    </div>
+<body>
+    <div class="body_container">
+        <header class="myName">
+            <h1>Neo Adam Bontia</h1>
+        </header>
+            
+        <div class="content_index">
+            <h2>WD230: Assignment Portal</h2>
+            <hr>
+            <ul>
+                <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
+                <li>Lesson 01: <a href="#">Design Principles Document</a></li>
+            </ul>
+        </div>
 
-    <div id="displayPicture">
-        <img src="images/DP_smaller.jpg" alt="My Picture">
-    </div>
+        <div class="displayPicture">
+            <img src="images/DP_smaller.jpg" alt="My Picture">
+        </div>
 
-    <footer>
-        <p id="info">
-            © 2021 | Neo Adam Bontia | Philippines | 
-            <a href="https://www.byui.edu/online">BYUI Online Learning</a>
-        </p>
-        <p id="update">Last Update: </p>
-    </footer>
+        <footer>
+            <p class="info">
+                © 2021 | Neo Adam Bontia | Philippines | 
+                <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+            </p>
+            <p class="update">Last Update: </p>
+        </footer>
+    </div>
 </body>
 
 </html>
