--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="displayPicture">
-            <img src="images/DP_smaller.jpg" alt="My Picture">
+            <img src="images/WDD230DP.jpg" alt="My Picture">
         </div>
 
         <footer>
