Added current year script to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="javascript/date.js"></script>
 </head>
 
 <body>
@@ -34,10 +35,12 @@
 
         <footer>
             <p class="info">
-                © 2021 | Neo Adam Bontia | Philippines | 
+                © <span id="year"></span> | Neo Adam Bontia | Philippines | 
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
-            <p class="update">Last Update: </p>
+            <p>Last Update: 
+                <span id = "update"></span>
+            </p>
         </footer>
     </div>
 </body>
