--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <hr>
             <ul>
                 <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
-                <li>Lesson 01: <a href="#">Design Principles Document</a></li>
+                <li>Lesson 01: <a href="design-principles.html">Design Principles Document</a></li>
             </ul>
         </div>
 
         <footer>
-            <p class="info">
+            <p>
                 © <span id="year"></span> | Neo Adam Bontia | Philippines | 
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
