Finished design-principles page

--- a/design-principles.html
+++ b/design-principles.html
@@ -7,7 +7,14 @@
     <title>Design Principles Document | Neo Adam Bontia</title>
     <meta name="description"
         content="Lesson 1 Assignment of WDD 230 of BYU - Idaho: Design Principles Document made by Neo Adam Bontia">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mandali&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spectral+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/design-principles/small.css">
+    <link rel="stylesheet" href="css/design-principles/medium.css">
+    <link rel="stylesheet" href="css/design-principles/large.css">
     <script src="javascript/date.js" defer></script>
 </head>
 
@@ -18,37 +25,45 @@
         <h2>Neo Adam Bontia</h2>
     </header>
 
-    <div class="content-container">
-        <div class="vh-column">
+    <main>
+        <section>
             <h3>Visual Heirarchy</h3>
             <p class="site-name">Dungeons & Dragons</p>
             <a href="https://dnd.wizards.com/">https://dnd.wizards.com/</a>
             <img src="images/D&D_VisualHierarchy.jpg">
             <p class="comment">
-                Enter comment here.
+                Visual Heirarchy was used on this page to showcase Dungeons & Dragons' new handbook.
+                Displaying the cover page of the manual attracts the eyes of its viewers and the large
+                font that displays the manual's name solidifies the attention of the viewer. The 'Learn
+                More' button then enticies the viewer to interact with it.
             </p>
-        </div>
+        </section>
 
-        <div class="ws-column">
+        <section>
             <h3>White Space and Clean Design</h3>
             <p class="site-name">Calendly</p>
             <a href="https://calendly.com/">https://calendly.com/</a>
             <img src="images/Calendly_WhiteSpace.jpg">
             <p class="comment">
-                Enter comment here.
+                Calendly's website design is so simple that looks clean and user-friendly. Calendly would
+                want to sell their product as a professional yet easy-to-use scheduling application, and
+                the way its site is design sure sells their product that way.
             </p>
-        </div>
+        </section>
 
-        <div class="hl-column">
+        <section>
             <h3>Hick's Law</h3>
             <p class="site-name">GrabFood</p>
             <a href="https://food.grab.com/ph/en/">https://food.grab.com/ph/en/</a>
             <img src="images/GrabFood_HicksLaw.jpg">
             <p class="comment">
-                Enter comment here.
+                Before choosing which restaurant to order food from, it is easier to know which food you would
+                want to eat. There are a plethora of varieties of food and that makes it usually hard to choose
+                what you would like to it. By adding a filter system of which food one would like to eat, it
+                becomes less work for the user to choose.
             </p>
-        </div>
-    </div>
+        </section>
+    </main>
 
     <footer>
         <p>
