--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <ul>
                 <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
                 <li>Lesson 01: <a href="design-principles.html">Design Principles Document</a></li>
+                <li>Lesson 02: <a href="lesson2/index.html">Website Planning Document</a></li>
             </ul>
         </div>
 
