--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -8,24 +8,27 @@
     <meta name="description"
         content="Lesson 2 Assignment of WDD 230 of BYU - Idaho: Website Planning Document made by Neo Adam Bontia">
     <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
+    <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/medium.css">
     <script src="/neobontia.github.io/javascript/date.js" defer></script>
 </head>
 
 <body>
 
     <header>
-        <div class="site-logo">
-            <img src="#">
+        <div class="header-container">
+            <div class="site-logo">
+                <img src="/neobontia.github.io/images/weatherwithus/logo.png">
+            </div>
+            
+            <h1 class="site-name">Weather With Us</h1>
+            <h2 class="site-url">www.weatherwithus.com</h2>
+            <h2 class="site-motto">Rain or shine, we can weather it out!</h2>
         </div>
-        
-        <h1 class="site-name">Weather With Us</h1>
-        <h2 class="site-url">www.weatherwithus.com</h2>
-        <h2 class="site-motto">Rain or shine, we can weather it out!</h2>
     </header>
 
     <nav>
         <ul>
-            <li><a href="index.html">Purpose</a></li>
+            <li class="active"><a href="index.html">Purpose</a></li>
             <li><a href="target-audience.html">Target Audience</a></li>
             <li><a href="color-scheme.html">Color Scheme</a></li>
             <li><a href="typography.html">Typography</a></li>
