Finshed the target-audience.html and its css and linked it to index.html

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Planning Document | Neo Adam Bontia</title>
+    <title>Website Planning Document | Purpose | Neo Adam Bontia</title>
     <meta name="description"
         content="Lesson 2 Assignment of WDD 230 of BYU - Idaho: Website Planning Document made by Neo Adam Bontia">
     <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
@@ -37,7 +37,6 @@
 
     <main>
         <div class="site-purpose">
-            <h3>Purpose</h3>
             <p>Enter purpose here.</p>
         </div>
     </main>
