Added the font styles to the htmls.

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -7,6 +7,11 @@
     <title>Website Planning Document | Purpose | Neo Adam Bontia</title>
     <meta name="description"
         content="Lesson 2 Assignment of WDD 230 of BYU - Idaho: Website Planning Document made by Neo Adam Bontia">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
     <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/medium.css">
     <script src="/neobontia.github.io/javascript/date.js" defer></script>
