Added the media change.

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
+    <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/style.css">
     <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/medium.css">
     <script src="/neobontia.github.io/javascript/date.js" defer></script>
 </head>
@@ -42,7 +43,13 @@
 
     <main>
         <div class="site-purpose">
-            <p>Enter purpose here.</p>
+            <p>Admit it or not, weather plays a big role in our lives. It determines what activities we can do,
+               it determines what we would like to eat, it determines our mood, it determines our way of life,
+               it even determines our safety. It can be tough facing a force of nature alone, but together we
+               stand a chance. Weather with us provides regional information and a five-day weather forecast,
+               helping you plan out your week. Never be caught off guard again by a storm, nor let a sunny
+               filled sky pass you by. Rain or shine, we can weather it out! 
+            </p>
         </div>
     </main>
 
