--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
+    <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/style.css">
     <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/medium.css">
     <script src="/neobontia.github.io/javascript/date.js" defer></script>
 </head>
@@ -42,41 +43,53 @@
 
     <main>
         <div class="site-audience">
-            <p>Describe the target audience here.</p>
+            <p>Weather with us targets those that are dependant on the weather. These may be those that work outside,
+               those that plan to travel, those that are planning activities outside, or could even be for those that
+               want to study the weather. However, based on the website design, Weather with us only accomodates those
+               that lives within Preston, Soda Springs, or Fish Haven, Idaho. The website is also designed to accomodate
+               mobile and desktop view.
+            </p>
 
             <div class="persona-container">
                 <h3 class="persona-header">Persona 1</h3>
                 <p>Name: </p>
-                <p>TBH</p>
+                <p>Ronan Hill</p>
                 <p>Age: </p>
-                <p>TBH</p>
+                <p>22</p>
                 <p>Occupation: </p>
-                <p>TBH</p>
+                <p>Student</p>
                 <p>Scenarios: </p>
                 <ul class="scenario-list">
-                    <li>TBH</li>
-                    <li>TBH</li>
-                    <li>TBH</li>
-                    <li>TBH</li>
-                    <li>TBH</li>
+                    <li>Ronan's usual mode of transportation to school, his car, has a flat tire. He has a bike that he can ride
+                        to go to school but he needs to know if it will not rain today. If it will rain however, he will just
+                        take the bus.
+                    </li>
+                    <li>Ronan likes to play basketball with his friends. He wants to invite them over to his church to play there
+                        three days from now. He wants to know how the weather would be three days from now.
+                    </li>
                 </ul>
             </div>
 
             <div class="persona-container">
                 <h3 class="persona-header">Persona 2</h3>
                 <p>Name: </p>
-                <p>TBH</p>
+                <p>Jhobell Tapang</p>
                 <p>Age: </p>
-                <p>TBH</p>
+                <p>31</p>
                 <p>Occupation: </p>
-                <p>TBH</p>
+                <p>Teacher</p>
                 <p>Scenarios: </p>
                 <ul class="scenario-list">
-                    <li>TBH</li>
-                    <li>TBH</li>
-                    <li>TBH</li>
-                    <li>TBH</li>
-                    <li>TBH</li>
+                    <li>It has been raining for a whole day now and Jhobell is worried if a storm is coming so that she can advise
+                        her class if classes would be suspended because of the storm.
+                    </li>
+                    <li>Jhobell usually commutes to go to school. As a teacher, she prepares a lot of visual aids so her hands are
+                        always full. As much as possible, she wants to refrain from bringing an umbrella to free up her hands or her
+                        bag. If she knew when it would rain, it would be easier for to decide to bring an umbrella or not.
+                    </li>
+                    <li>Jhobell plans to buy groceries for the whole week. She plans to cook hot dishes on rainy days so that her
+                        children will not feel so cold during the rain.
+                    </li>
                 </ul>
             </div>
         </div>
