--- a/lesson2/color-scheme.html
+++ b/lesson2/color-scheme.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
+    <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/style.css">
     <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/medium.css">
     <script src="/neobontia.github.io/javascript/date.js" defer></script>
 </head>
