--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/neobontia.github.io/css/normalize.css">
-    <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/style.css">
-    <link rel="stylesheet" href="/neobontia.github.io/css/lesson2/medium.css">
-    <script src="/neobontia.github.io/javascript/date.js" defer></script>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <script src="javascript/date.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <header>
         <div class="header-container">
             <div class="site-logo">
-                <img src="/neobontia.github.io/images/weatherwithus/logo.png">
+                <img src="images/logo.png">
             </div>
 
             <h1 class="site-name">Weather With Us</h1>
