--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>Lesson 01: <a href="#">Course Assignment Portal</a></li>
                 <li>Lesson 01: <a href="design-principles.html">Design Principles Document</a></li>
                 <li>Lesson 02: <a href="lesson2/index.html">Website Planning Document</a></li>
+                <li>Lesson 02: <a href="weather/preston.html">Preston Town Page Start</a></li>
             </ul>
         </div>
 
