Added css to header and nav

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -20,21 +20,23 @@
 <body>
     <header>
         <img class="logo" src="images/logo.png">
-        <h1 class="site-name">Weather With Us</h1>
-        <h2 class="site-motto">Rain or shine, we can weather it out!</h2>
-
-        <nav>
-            <button>&#9776;</button>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
-                <li><a href="#">Storm Center</a></li>
-                <li><a href="#">Gallery</a></li>
-            </ul>
-        </nav>
+        <div>
+            <h1 class="site-name">Weather With Us</h1>
+            <h2 class="site-motto">Rain or shine, we can weather it out!</h2>
+        </div>
     </header>
+
+    <nav>
+        <button>&#9776;</button>
+        <ul class="hide">
+            <li><a href="#">Home</a></li>
+            <li class="active"><a href="#">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
+        </ul>
+    </nav>
     
     <main>
         <div class="preston-content-container">
