Added a banner that displays only on Fridays.

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
+    <div id="banner">
+        Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.
+    </div>
+
     <header>
         <img class="logo" src="images/logo.png" alt="Weather With Us logo">
         <div>
@@ -110,7 +114,7 @@
             © <span id="year"></span> | Neo Adam Bontia | Philippines |
             <a href="https://www.byui.edu/online">BYUI Online Learning</a>
         </p>
-        
+
         <div class="date-container"><span id="date"></span></div>
     </footer>
     <script src="js/scripts.js"></script>
