--- a/weather/preston.html
+++ b/weather/preston.html
@@ -58,7 +58,13 @@
 
                 <div class="weather-summary">
                     <h4>Weather Summary</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor.</p>
+                        <p>
+                        Currently: <span id="currTemp">38</span>°F<br>
+                        Windchill: <span id="windChill"></span><br>
+                        High: <span id="highTemp">41</span>°F<br>
+                        Humidity: <span id="currTemp">50%</span><br>
+                        Wind Speed: <span id="windSpeed">5</span> mph
+                        </p>
                 </div>
             </div>
 
@@ -125,5 +131,6 @@
         <div class="date-container"><span id="date"></span></div>
     </footer>
     <script src="js/scripts.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
 </html>
