Fixed bug in img src for large view.

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -49,7 +49,7 @@
             <div class="hero-box">
                 <picture>
                     <source srcset="images/hero_medium.jpg" media="(min-width: 500px) and (max-width: 799px)">
-                    <source srcset="images/hero_large.jpeg" media="(min-width: 800px)">
+                    <source srcset="images/hero_large.jpg" media="(min-width: 800px)">
                     <img class="hero" src="images/hero_small.jpg" alt="Hero image">
                 </picture>
                 <div class="small"><p>SMALL</p></div>
