Finished lazyload.html layout and css.

--- a/lesson-4/lazyload.html
+++ b/lesson-4/lazyload.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Town Page | Neo Adam Bontia</title>
+    <title>Progressive Loading | Neo Adam Bontia</title>
     <meta name="description"
-        content="Preston Town Page for the Weather With Us Weather site made by Neo Adam Bontia for WDD 230 BYU-Idaho.">
-    <link rel="stylesheet" href="normalize.css">
+        content="Progressive Loading of Images assignment made by Neo Adam Bontia of BYU-Idaho.">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>W04 Activity: Progressive Loading of Images</h1>
+
+    <article>
+        <picture>
+            <img src="images/placeholder.png" data-src="images/pic1.jpg" alt="First picture">
+        </picture>
+
+        <picture>
+            <img src="images/placeholder.png" data-src="images/pic2.jpg" alt="Second picture">
+        </picture>
+
+        <picture>
+            <img src="images/placeholder.png" data-src="images/pic3.jpg" alt="Third picture">
+        </picture>
+
+        <picture>
+            <img src="images/placeholder.png" data-src="images/pic4.jpg" alt="Fourth picture">
+        </picture>
+
+        <picture>
+            <img src="images/placeholder.png" data-src="images/pic5.jpg" alt="Fifth picture">
+        </picture>
+    </article>
     
 </body>
 </html>
