--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <li>Lesson 02: <a href="lesson2/index.html">Website Planning Document</a></li>
                 <li>Lesson 02: <a href="weather/preston.html">Preston Town Page Start</a></li>
                 <li>Lesson 03: <a href="weather/preston.html">Preston Town Page</a></li>
-                <li>Lesson 04: <a href="weather/preston.html">Responsive Images</a></li>
+                <li>Lesson 03: <a href="weather/preston.html">Responsive Images</a></li>
+                <li>Lesson 04: <a href="lesson-4/lazyload.html">Progressive Loading of Images</a></li>
             </ul>
         </div>
 
