Added lazy loading of images.

--- a/lesson-4/lazyload.html
+++ b/lesson-4/lazyload.html
@@ -9,6 +9,7 @@
         content="Progressive Loading of Images assignment made by Neo Adam Bontia of BYU-Idaho.">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/javascript.js" defer></script>
 </head>
 <body>
     <h1>W04 Activity: Progressive Loading of Images</h1>
@@ -34,6 +35,6 @@
             <img src="images/placeholder.png" data-src="images/pic5.jpg" alt="Fifth picture">
         </picture>
     </article>
-    
+
 </body>
 </html>
