--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li>Lesson 03: <a href="weather/preston.html">Preston Town Page</a></li>
                 <li>Lesson 03: <a href="weather/preston.html">Responsive Images</a></li>
                 <li>Lesson 04: <a href="lesson-4/lazyload.html">Progressive Loading of Images</a></li>
+                <li>Lesson 04: <a href="gallery/gallery-7.html">The Gallery Page</a></li>
             </ul>
         </div>
 
