Initialized storm center html and linked it to index

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li>Lesson 03: <a href="weather/preston.html">Responsive Images</a></li>
                 <li>Lesson 04: <a href="lesson-4/lazyload.html">Progressive Loading of Images</a></li>
                 <li>Lesson 04: <a href="gallery/gallery-7.html">The Gallery Page</a></li>
+                <li>Lesson 04: <a href="storm/stormcenter.html">The Storm Center Page</a></li>
             </ul>
         </div>
 
