--- a/storm/stormcenter.html
+++ b/storm/stormcenter.html
@@ -41,7 +41,51 @@
     </nav>
 
     <main>
-        
+        <h3>Storm Center</h3>
+
+        <form method="get" action="thanks.html">
+            <fieldset>
+                <legend>Personal Information</legend>
+
+                <label>Full Name<input type="text" minlength="5" name="fullName" required></label>
+                <label>Email<input type="email" placeholder="someone@mail.com" name="email"></label>
+                <label>Phone Number<input type="tel" placeholder="###########" name="phone" required></label>
+                <label>ZIP Code<input type="number" placeholder="#####" pattern=".{5,5}" name="zip" required></label>
+            </fieldset>
+
+            <fieldset>
+                <legend>Storm Information</legend>
+
+                <label>Storm Date<input type="date" name="storm-date"></label>
+                <label>Storm Type<input list="storm-types" name="storm-type"></label>
+                    <datalist id="storm-types">
+                        <option value="Flash Flood">
+                        <option value="Hail">
+                        <option value="Hurricane">
+                        <option value="Thunderstorm">
+                        <option value="Tornado">
+                    </datalist>
+                <label>Storm Severity<input type="range" min="1" max="10" name="severity"></label>
+                <label>Storm Region<select name="region">
+                    <option value="">Select Region</option>
+                    <option value="Preston">Preston</option>
+                    <option value="Soda Springs">Soda Springs</option>
+                    <option value="Fish Haven">Fish Haven</option>
+                </select></label>
+
+                <fieldset>
+                    <legend>Are in danger?</legend>
+
+                    <label><input type="radio" name="danger-level" value="yes">Yes</label>
+                    <label><input type="radio" name="danger-level" value="no">No</label>
+                    <label><input type="radio" name="danger-level" value="maybe">Maybe</label>
+                </fieldset>
+
+                <label>Additional Information or Comments<textarea name="comments" placeholder="Enter text here..." ></textarea></label>
+            </fieldset>
+
+            <input type="submit" value="Report Storm">
+        </form>
     </main>
 
     <footer>
