--- a/storm/stormcenter.html
+++ b/storm/stormcenter.html
@@ -47,17 +47,17 @@
             <fieldset>
                 <legend>Personal Information</legend>
 
-                <label>Full Name<input type="text" minlength="5" name="fullName" required></label>
-                <label>Email<input type="email" placeholder="someone@mail.com" name="email"></label>
-                <label>Phone Number<input type="tel" placeholder="###########" name="phone" required></label>
-                <label>ZIP Code<input type="number" placeholder="#####" pattern=".{5,5}" name="zip" required></label>
+                <label class="top">Full Name<input type="text" minlength="5" name="fullName" required></label>
+                <label class="top">Email<input type="email" placeholder="someone@mail.com" name="email"></label>
+                <label class="top">Phone Number<input type="tel" placeholder="###########" name="phone" required></label>
+                <label class="top">ZIP Code<input type="number" placeholder="#####" pattern=".{5,5}" name="zip" required></label>
             </fieldset>
 
             <fieldset>
                 <legend>Storm Information</legend>
 
-                <label>Storm Date<input type="date" name="storm-date"></label>
-                <label>Storm Type<input list="storm-types" name="storm-type"></label>
+                <label class="top">Storm Date<input type="date" name="storm-date"></label>
+                <label class="top">Storm Type<input list="storm-types" name="storm-type"></label>
                     <datalist id="storm-types">
                         <option value="Flash Flood">
                         <option value="Hail">
@@ -65,8 +65,8 @@
                         <option value="Thunderstorm">
                         <option value="Tornado">
                     </datalist>
-                <label>Storm Severity<input type="range" min="1" max="10" name="severity"></label>
-                <label>Storm Region<select name="region">
+                <label class="top">Storm Severity<input type="range" min="1" max="10" name="severity"></label>
+                <label class="top">Storm Region<select name="region">
                     <option value="">Select Region</option>
                     <option value="Preston">Preston</option>
                     <option value="Soda Springs">Soda Springs</option>
@@ -76,15 +76,15 @@
                 <fieldset>
                     <legend>Are in danger?</legend>
 
-                    <label><input type="radio" name="danger-level" value="yes">Yes</label>
-                    <label><input type="radio" name="danger-level" value="no">No</label>
-                    <label><input type="radio" name="danger-level" value="maybe">Maybe</label>
+                    <label class="sbs"><input type="radio" name="danger-level" value="yes"> Yes</label>
+                    <label class="sbs"><input type="radio" name="danger-level" value="no"> No</label>
+                    <label class="sbs"><input type="radio" name="danger-level" value="maybe"> Maybe</label>
                 </fieldset>
 
-                <label>Additional Information or Comments<textarea name="comments" placeholder="Enter text here..." ></textarea></label>
+                <label class="top">Additional Information or Comments<textarea name="comments" placeholder="Enter text here..." ></textarea></label>
             </fieldset>
 
-            <input type="submit" value="Report Storm">
+            <input class="submitBtn" type="submit" value="Report Storm">
         </form>
     </main>
 
