Finished styling the thank you page

--- a/storm/thanks.html
+++ b/storm/thanks.html
@@ -40,8 +40,8 @@
         </ul>
     </nav>
 
-    <main>
-
+    <main class="thank-you">
+        <h3>Thank you for reporting the storm!</h3>
     </main>
 
     <footer>
