--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li>Lesson 04: <a href="lesson-4/lazyload.html">Progressive Loading of Images</a></li>
                 <li>Lesson 04: <a href="gallery/gallery-7.html">The Gallery Page</a></li>
                 <li>Lesson 04: <a href="storm/stormcenter.html">The Storm Center Page</a></li>
+                <li>Lesson 05: <a href="lesson-9/prophets.html">Latter-day Prophets</a></li>
             </ul>
         </div>
 
