initialized home page and organized data for whole site

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li>Lesson 04: <a href="gallery/gallery-7.html">The Gallery Page</a></li>
                 <li>Lesson 04: <a href="storm/stormcenter.html">The Storm Center Page</a></li>
                 <li>Lesson 05: <a href="lesson-9/prophets.html">Latter-day Prophets</a></li>
+                <li>Lesson 05: <a href="lesson-5/index.html">Weather Site Home Page</a></li>
             </ul>
         </div>
 
