--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li>Lesson 04: <a href="storm/stormcenter.html">The Storm Center Page</a></li>
                 <li>Lesson 05: <a href="lesson-9/prophets.html">Latter-day Prophets</a></li>
                 <li>Lesson 05: <a href="lesson-5/index.html">Weather Site Home Page</a></li>
+                <li>Lesson 05: <a href="lesson-10/preston-10/preston-10.html">Preston Weather API</a></li>
             </ul>
         </div>
 
