Fixed weather summary and re-linked pages together

--- a/lesson-10/preston-10/preston-10.html
+++ b/lesson-10/preston-10/preston-10.html
@@ -59,11 +59,11 @@
                 <div class="weather-summary">
                     <h4>Weather Summary</h4>
                         <p>
-                        Currently: <span id="currTemp">38</span>°F<br>
+                        Currently: <span id="currTemp"></span>°F<br>
                         Windchill: <span id="windChill"></span><br>
-                        High: <span id="highTemp">41</span>°F<br>
-                        Humidity: <span id="currTemp">50%</span><br>
-                        Wind Speed: <span id="windSpeed">5</span> mph
+                        High: <span id="highTemp"></span>°F<br>
+                        Humidity: <span id="humidity"></span>%<br>
+                        Wind Speed: <span id="windSpeed"></span> mph
                         </p>
                 </div>
             </div>
@@ -131,6 +131,5 @@
         <div class="date-container"><span id="date"></span></div>
     </footer>
     <script src="javascript/preston/scripts.js"></script>
-    <script src="javascript/preston/windchill.js"></script>
 </body>
 </html>
