Finished forecast API

--- a/lesson-10/preston-10/preston-10.html
+++ b/lesson-10/preston-10/preston-10.html
@@ -59,7 +59,8 @@
                 <div class="weather-summary">
                     <h4>Weather Summary</h4>
                         <p>
-                        Currently: <span id="currTemp"></span>°F<br>
+                        Condition: <span id="condition"></span><br>
+                        Temperature: <span id="currTemp"></span>°F<br>
                         Windchill: <span id="windChill"></span><br>
                         High: <span id="highTemp"></span>°F<br>
                         Humidity: <span id="humidity"></span>%<br>
@@ -70,23 +71,7 @@
 
             <div class="forecast">
                 <h4>5-day Forecast</h4>
-                <ul>
-                    <li class="forecast-box">
-                        <h5>Day 1</h5><img class="forecast-icon" src="images/preston/cloud.png" alt="Forecast for Day 1">
-                    </li>
-                    <li class="forecast-box">
-                        <h5>Day 2</h5><img class="forecast-icon" src="images/preston/cloud.png" alt="Forecast for Day 2">
-                    </li>
-                    <li class="forecast-box">
-                        <h5>Day 3</h5><img class="forecast-icon" src="images/preston/cloud.png" alt="Forecast for Day 3">
-                    </li>
-                    <li class="forecast-box">
-                        <h5>Day 4</h5><img class="forecast-icon" src="images/preston/cloud.png" alt="Forecast for Day 4">
-                    </li>
-                    <li class="forecast-box">
-                        <h5>Day 5</h5><img class="forecast-icon" src="images/preston/cloud.png" alt="Forecast for Day 5">
-                    </li>
-                </ul>
+                <div class="forecasts"></div>
             </div>
 
             <div class="article">
