--- a/lesson-10/preston-10/preston-10.html
+++ b/lesson-10/preston-10/preston-10.html
@@ -110,7 +110,8 @@
 
         <p>
             © <span id="year"></span> | Neo Adam Bontia | Philippines |
-            <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+            <a href="https://www.byui.edu/online">BYUI Online Learning</a> | 
+            Weather Data: <a href="https://openweathermap.org">OpenWeather</a>
         </p>
 
         <div class="date-container"><span id="date"></span></div>
