Added link to OpenWeather

--- a/lesson-10/preston-10/preston-10.html
+++ b/lesson-10/preston-10/preston-10.html
@@ -111,7 +111,7 @@
         <p>
             © <span id="year"></span> | Neo Adam Bontia | Philippines |
             <a href="https://www.byui.edu/online">BYUI Online Learning</a> | 
-            Weather Data: <a href="https://openweathermap.org">OpenWeather</a>
+            Weather Data: <a href="https://openweathermap.org" target="_blank">OpenWeather</a>
         </p>
 
         <div class="date-container"><span id="date"></span></div>
