--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li>Lesson 05: <a href="lesson-9/prophets.html">Latter-day Prophets</a></li>
                 <li>Lesson 05: <a href="lesson-5/index.html">Weather Site Home Page</a></li>
                 <li>Lesson 05: <a href="lesson-10/preston-10/preston-10.html">Preston Weather API</a></li>
+                <li>Lesson 06: <a href="lesson-11/index.html">Usability Peer Review</a></li>
             </ul>
         </div>
 
