Added the link to the complete weather site

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li>Lesson 05: <a href="lesson-5/index.html">Weather Site Home Page</a></li>
                 <li>Lesson 05: <a href="lesson-10/preston-10/preston-10.html">Preston Weather API</a></li>
                 <li>Lesson 06: <a href="lesson-11/index.html">Usability Peer Review</a></li>
+                <li>Lesson 06: <a href="lesson-06/index.html">Complete Weather Site</a></li>
             </ul>
         </div>
 
