--- a/lesson-06/gallery.html
+++ b/lesson-06/gallery.html
@@ -33,7 +33,7 @@
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
+            <li><a href="soda-springs.html">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li class="active"><a href="#">Gallery</a></li>
